# assp

./: AGENTS.md  Cargo.toml  README.md  all-parity.ps1  bench.ps1  binary-parity.ps1  build.ps1  build.rs  build.sh  fast-parity.ps1  phase-profile.ps1  profile.ps1
asm/app/: freebsd64.asm  linux64.asm  main.asm  win64.asm
asm/core/: bpm.asm  density.asm  duration.asm  hash.asm  matrix.asm  metadata.asm  minimize.asm  note_stats.asm  parity.asm  patterns.asm  scan.asm  simfile.asm  stream.asm  tech.asm  tech_counts.asm  version.asm
examples/: assp_baseline.rs
fixtures/: chart_own_metadata_timing.ssc  chart_own_timing.ssc  dance_double_basic.ssc  dance_double_timing.ssc  dance_double_timing_holds.ssc  global_metadata_timing.ssc  legacy_split_timing_disabled.ssc  timing_fakes.ssc  timing_holds.ssc
fixtures/ITL Online 2026/[07] 24HRS (SM) [G. Rosewood]/: 24hrs.ssc
include/: asmssp.h  asmssp.inc  assp.h  assp.inc  default_pattern_dfa.inc  win64.inc
src/: abi.rs  lib.rs
tests/: bpm.rs  bpm_cycles.rs  breakdown.rs  density.rs  density_cycles.rs  duration.rs  duration_cycles.rs  equally_spaced.rs  hash.rs  hash_cycles.rs  matrix.rs  matrix_cycles.rs  metadata.rs  minimize.rs  minimize_cycles.rs  note_stats.rs  note_stats_cycles.rs  nps.rs  parity_cycles.rs  parse_cycles.rs  patterns.rs  patterns_cycles.rs  rssp_core_parity.rs  scan.rs  scan_cycles.rs  segment_breakdown.rs  segments.rs  simfile.rs  simfile_cycles.rs  speed_map.rs  stream.rs  stream_cycles.rs  tech.rs  tech_counts_cycles.rs  tokens.rs
tmp-parity/: 000000.sm  actual.json
(+309 files in other folders)
