[package]
name = "assp"
version = "0.1.0"
edition = "2024"
build = "build.rs"
publish = false

[lib]
name = "assp"
path = "src/lib.rs"

[features]
asmssp-bin = ["dep:rssp-core"]

[[bin]]
name = "asmssp"
path = "src/bin/asmssp.rs"
required-features = ["asmssp-bin"]

[dependencies]
rssp-core = { path = "../rssp/crates/rssp-core", optional = true }

[dev-dependencies]
rssp-core = { path = "../rssp/crates/rssp-core" }
md5 = "0.7"
serde_json = "1"
walkdir = "2"
zstd = "0.13"

[build-dependencies]
